arm_ss.add(when: 'CONFIG_ISIS_OBC', if_true: files(
  'iobc-board.c',
  'iobc-soc.c',
  'iobc-reserved_memory.c',
  'ioxfer-server.c',
  'at91-pmc.c',
  'at91-aic.c',
  'at91-aic_stub.c',
  'at91-rtt.c',
  'at91-pit.c',
  'at91-rstc.c',
  'at91-matrix.c',
  'at91-dbgu.c',
  'at91-usart.c',
  'at91-twi.c',
  'at91-spi.c',
  'at91-pio.c',
  'at91-sdramc.c',
  'at91-mci.c',
  'at91-tc.c',
  'gpio-led.c' ,
  'gpio-pushbutton.c'))
